# migrate-ai-backend

./: .dockerignore  .env.example  .env.prod  AWS_COGNITO_SETUP.md  AWS_DEPLOYMENT_STRATEGY.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: admin.py  ai_checklists.py  auth.py  checklists.py  cognito_auth.py  countries.py  data_collection.py  policies.py  policy_monitoring.py  profile.py  users.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  database.py  seed.py
app/models/: __init__.py  checklist.py  country.py  immigration_requirements.py  policy.py  user.py
app/schemas/: __init__.py  auth.py  checklist.py  immigration.py  mcp.py  profile.py  user.py
app/services/: checklist_service.py  cognito_service.py  cognito_user_status_service.py  cron_service.py  data_normalizer.py  enhanced_immigration_data_collector.py  fallback_checklist_service.py  immigration_data_collector.py  openai_service.py  personalization_service.py  policy_monitoring_service.py  profile_service.py  profile_sync_service.py  user_migration_service.py
infrastructure/aws/: deploy.sh  ecs-task-definition.json
migrations/: env.py
migrations/versions/: 140d0bae6f88_remove_birthdate_from_users.py  20315c2aac43_update_schema_to_use_uuids_for_user_ids.py  20e21bf8e1d7_uuid_migration_fresh_start.py  d7d26d3652a6_initial_migration.py
scripts/: start-db.sh  start-prod.sh
